apps/base/blob-explorer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blob-explorer
  namespace: blob-explorer
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local:4180/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://oauth2-proxy.aks-lab.local:9980/oauth2/start?rd=$scheme%3A%2F%2F$http_host$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-User,X-Auth-Request-Email"
spec:
  ingressClassName: nginx
  rules:
    - host: blob-explorer.aks-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blob-explorer
                port:
                  number: 80
